[gd_scene load_steps=4 format=3 uid="uid://c57l3uthheo07"]

[ext_resource type="Script" path="res://menu_opciones.gd" id="1_f2l6n"]
[ext_resource type="Texture2D" uid="uid://c23k26exd3qom" path="res://imagenes/fonfo menu.webp" id="2_x6oc3"]
[ext_resource type="AudioStream" uid="uid://1rsykv3l7mbv" path="res://imagenes/Musica/Men√∫.mp3" id="3_mn1vl"]

[node name="Menu_Opciones" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 424.0
offset_top = 218.0
offset_right = 464.0
offset_bottom = 258.0
script = ExtResource("1_f2l6n")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -434.0
offset_top = -226.0
offset_right = 734.0
offset_bottom = 437.0
texture = ExtResource("2_x6oc3")

[node name="volver" type="Button" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = -4.0
offset_right = 370.0
offset_bottom = 91.0
text = "Volver"

[node name="Configurar" type="Button" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 106.0
offset_right = 375.0
offset_bottom = 224.0
text = "Configurar"

[node name="musica" type="HSlider" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = -95.0
offset_right = 367.0
offset_bottom = -79.0

[node name="master" type="HSlider" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = -148.0
offset_right = 371.0
offset_bottom = -132.0

[node name="Efecto" type="HSlider" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = -37.0
offset_right = 370.0
offset_bottom = -21.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = -122.0
offset_right = 178.0
offset_bottom = -99.0
text = "Musica"

[node name="LabelMaster" type="Label" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = -178.0
offset_right = 178.0
offset_bottom = -155.0
text = "Master"

[node name="Efecto2" type="Label" parent="."]
layout_mode = 0
offset_left = 127.0
offset_top = -68.0
offset_right = 175.0
offset_bottom = -45.0
text = "Efecto"

[node name="menu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_mn1vl")
autoplay = true
playback_type = 1

[connection signal="pressed" from="volver" to="." method="_on_volver_pressed"]
[connection signal="value_changed" from="musica" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Efecto" to="." method="_on_efecto_value_changed"]
